force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/VCG_CPQ_Quote_Approval__c.object-meta.xml
<CustomObject>
    <label>Quote Approval</label>
    <nameField>
        <label>Quote Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>