force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/fields/Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Group</label>
    <referenceTo>VCG_CPQ_Approval_Group__c</referenceTo>
    <relationshipLabel>Quote Approvals</relationshipLabel>
    <relationshipName>Quote_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>