force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/fields/Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reason__c</fullName>
    <label>Approval Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>