force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>