force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>VCG_CPQ_Quote__c</referenceTo>
    <relationshipLabel>Quote Approvals</relationshipLabel>
    <relationshipName>Quote_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>