force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/fields/Quote_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Field__c</fullName>
    <label>Quote Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>