force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_Accounting_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_Accounting_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Accounting</label>
    <queue>CPQ_Accounting</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>