force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_Contract_Renewal_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_Contract_Renewal_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Contract Renewal</label>
    <queue>CPQ_Contract_Renewal</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>