force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_DealDesk_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_DealDesk_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Deal Desk</label>
    <queue>CPQ_DealDesk</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>