force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_Finance_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_Finance_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Finance</label>
    <queue>CPQ_Finance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>