force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_ProServ_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_ProServ_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Pro Serv</label>
    <queue>CPQ_ProServ</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>