force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_Services_Operations_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_Services_Operations_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Services Operations</label>
    <queue>CPQ_Services_Operations</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>