force-app/main/default/objects/VCG_CPQ_Quote_Approval__c/listViews/CPQ_Telematics_VCG_CPQ_Quote_Approval.listView-meta.xml
<ListView>
    <fullName>CPQ_Telematics_VCG_CPQ_Quote_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>CPQ Telematics</label>
    <queue>CPQ_Telematics</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>